# KG

./: README.md  TESTING.md  download_samples.sh  entity_config.json  hello.py  input.md  input.ttl  pyproject.toml  sample.csv  sample.ttl  test_kg_generation.py  test_markitdown.py  visualize_kg.py
samples/: book.ttl
src/: cq_generator.py  kg_builder.py  main.py  ontology_matcher.py  relation_extractor.py
