[tool.poetry]
name = "knowledge-graph-generator"
version = "0.1.0"
description = "A knowledge graph generation system using NLP and RDF"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.5.2"
rdflib = "^6.3.2"
textract = "^1.6.5"
argparse = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"
black = "^23.3.0"
isort = "^5.12.0"

[tool.poetry.scripts]
kg-generator = "src.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
